[package]
name = "rublock"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1.1"
env_logger = "0.11.5"
log = "0.4.22"
sha2 = "0.10.8"
vrf = "0.2.4"

# If you're combining a binary and library in one project
[lib]
name = "rublock"
path = "src/libs.rs"

[[bin]]
name = "rublock"
path = "src/main.rs"
